@@ -42,7 +42,7 @@ This can also be set via <<apm-start-span,`apm.startSpan()`>>.
 
 [small]#Added in: v0.1.0#
 
-[small]#Split components into `type`, `subtype` and `action` in: v3.0.0# 
+[small]#Split components into `type`, `subtype` and `action` in: v3.0.0#
 
 * +{type-string}+ *Default:* `custom`
 
@@ -95,36 +95,38 @@ a database query would generally have an action of `query`.
 Get the serialized traceparent string of the span.
 
 [[span-set-label]]
-==== `span.setLabel(name, value)`
+==== `span.setLabel(name, value[, stringify = true])`
 
-[small]#Added in: v2.1.0#
-
-[small]#Renamed from `span.setTag()` to `span.setLabel()`: v2.10.0#
+[small]#Added in: v2.1.0# +
+[small]#Renamed from `span.setTag()` to `span.setLabel()`: v2.10.0# +
+[small]#Added `stringify` argument in: v3.10.0#
 
 * `name` +{type-string}+
-Periods (`.`), asterisks (`*`), and double quotation marks (`"`) will be replaced by underscores (`_`),
+Any periods (`.`), asterisks (`*`), or double quotation marks (`"`) will be replaced by underscores (`_`),
 as those characters have special meaning in Elasticsearch
-* `value` +{type-string}+
-If a non-string data type is given,
-it's converted to a string before being sent to the APM Server
+* `value` +{type-string}+ | +{type-number}+ | +{type-boolean}+
+* `stringify` +{type-boolean}+
+Defaults to `true`. When true, if a non-string `value` is given, it is
+converted to a string before being sent to the APM Server.
 
 Set a label on the span.
 You can set multiple labels on the same span.
 
 [[span-add-labels]]
-==== `span.addLabels({ [name]: value })`
+==== `span.addLabels({ [name]: value }[, stringify = true])`
 
-[small]#Added in: v2.1.0#
-
-[small]#Renamed from `span.addTags()` to `span.addLabels()`: v2.10.0#
+[small]#Added in: v2.1.0# +
+[small]#Renamed from `span.addTags()` to `span.addLabels()`: v2.10.0# +
+[small]#Added `stringify` argument in: v3.10.0#
 
 * `labels` +{type-object}+ Contains key/value pairs:
 ** `name` +{type-string}+
 Any periods (`.`), asterisks (`*`), or double quotation marks (`"`) will be replaced by underscores (`_`),
 as those characters have special meaning in Elasticsearch
-** `value` +{type-string}+
-If a non-string data type is given,
-it's converted to a string before being sent to the APM Server
+** `value` +{type-string}+ | +{type-number}+ | +{type-boolean}+
+* `stringify` +{type-boolean}+
+Defaults to `true`. When true, if a non-string `value` is given, it is
+converted to a string before being sent to the APM Server.
 
 Add several labels on the span.
 You can add labels multiple times.
