@@ -205,16 +205,16 @@ Agent.prototype.setCustomContext = function (context) {
   return true
 }
 
-Agent.prototype.setLabel = function (key, value) {
+Agent.prototype.setLabel = function (key, value, stringify) {
   var trans = this.currentTransaction
   if (!trans) return false
-  return trans.setLabel(key, value)
+  return trans.setLabel(key, value, stringify)
 }
 
-Agent.prototype.addLabels = function (labels) {
+Agent.prototype.addLabels = function (labels, stringify) {
   var trans = this.currentTransaction
   if (!trans) return false
-  return trans.addLabels(labels)
+  return trans.addLabels(labels, stringify)
 }
 
 Agent.prototype.addFilter = function (fn) {
